# growing-dags-rs

./: Cargo.toml  README.md
bench/wnt/: README.md  dag.txt  targets.txt
src/: lib.rs  main.rs  util.rs
src/alg/: cost.rs  grow.rs  mod.rs  path.rs
src/parsing/: dag.rs  data.rs  interactome.rs  mod.rs  network.rs  weight.rs
tests/: files.rs
tests/fixtures/triangle/: dag-expected.txt  dag.txt  interactome.txt
