[package]
name = "growing-dags"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bimap = "0.6.3"
clap = { version = "4.5.39", features = ["derive"] }
either = "1.15.0"
log = "0.4.27"
never = "0.1.0"
ordered-float = "5.0.0"
petgraph = "0.8.1"
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
ctor = "0.4.2"
